--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <video controls width="600" height="400">
-        <source src="C:\Users\Max Aboud\Downloads\galleryasdasd.mp4" type="video/mp4">
+        <source src="galleryasdasd.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 </body>
